New license. Adjust manifest.